[tool.poetry]
name = "classifier"
version = "0.1.0"
description = ""
authors = ["gsjunqueira <giovanisjunqueira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
ucimlrepo = "^0.0.7"
imbalanced-learn = "^0.12.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
